unpackaged/main/default/objects/ProgramApi__Program_Type__c/ProgramApi__Program_Type__c.object-meta.xml
<CustomObject>
    <description>This object is used to categorize programs by operational area (e.g. Certification, Accreditation, Education).</description>
    <label>Program Type</label>
    <nameField>
        <displayFormat>PT-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>