unpackaged/main/default/objects/ProgramApi__Program_Type__c/fields/ProgramApi__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Display_Order__c</fullName>
    <description>Ranks the order that the program types are listed on Program page</description>
    <inlineHelpText>Ranks the order that the program types are listed on Program page</inlineHelpText>
    <label>Display Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>