unpackaged/main/default/objects/ProgramApi__Program_Type__c/fields/ProgramApi__Parent_Program_Type__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Parent_Program_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the Program Type to a Parent Program Type. Parent Program Types group it&#39;s children program types on a single page.</description>
    <inlineHelpText>Relates the Program Type to a Parent Program Type. Parent Program Types group it&#39;s children program types on a single page.</inlineHelpText>
    <label>Parent Program Type</label>
    <referenceTo>ProgramApi__Program_Type__c</referenceTo>
    <relationshipLabel>Program Types</relationshipLabel>
    <relationshipName>Program_Types</relationshipName>
    <type>Lookup</type>
</CustomField>