unpackaged/main/default/objects/ProgramApi__Program_Type__c/fields/ProgramApi__Program_Profile_Instructions__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Program_Profile_Instructions__c</fullName>
    <description>The value in this field will be displayed at the top of the Program Profile page, under the Program Profile Page Title.</description>
    <inlineHelpText>The value in this field will be displayed at the top of the Program Profile page, under the Program Profile Page Title.</inlineHelpText>
    <label>Program Profile Instructions</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>