unpackaged/main/default/objects/ProgramApi__Program_Type__c/fields/ProgramApi__Program_Profile_Page_Title__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Program_Profile_Page_Title__c</fullName>
    <description>The value in this field will be displayed at the top of the Program Profile page.</description>
    <inlineHelpText>The value in this field will be displayed at the top of the Program Profile page.</inlineHelpText>
    <label>Program Profile Page Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>