unpackaged/main/default/objects/ProgramApi__Program_Type__c/fields/ProgramApi__Program_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Program_Type_Name__c</fullName>
    <description>Name program category</description>
    <inlineHelpText>Name program category</inlineHelpText>
    <label>Program Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>