unpackaged/main/default/objects/ProgramApi__Program_Type__c/listViews/ProgramApi__All.listView-meta.xml
<ListView>
    <fullName>ProgramApi__All</fullName>
    <columns>NAME</columns>
    <columns>ProgramApi__Program_Type_Name__c</columns>
    <columns>ProgramApi__Display_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>